--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,67 @@
 # =============== #
- 
+
 # Unity generated #
- 
+
 # =============== #
- 
+
 Temp/
- 
+
 Obj/
- 
+
 UnityGenerated/
- 
+
 Library/
- 
- 
- 
+
+
+
 # ===================================== #
- 
+
 # Visual Studio / MonoDevelop generated #
- 
+
 # ===================================== #
- 
+
 ExportedObj/
- 
+
 *.svd
- 
+
 *.userprefs
- 
+
 *.csproj
- 
+
 *.pidb
- 
+
 *.suo
- 
+
 *.sln
- 
+
 *.user
- 
+
 *.unityproj
- 
+
 *.booproj
- 
- 
- 
+
+
+
 # ============ #
- 
+
 # OS generated #
- 
+
 # ============ #
- 
+
 .DS_Store
- 
+
 .DS_Store?
- 
+
 ._*
- 
+
 .Spotlight-V100
- 
+
 .Trashes
- 
+
 Icon?
- 
+
 ehthumbs.db
- 
+
 Thumbs.db
- 
-GraphicsSettings.asset
- 
-ProjectSettings.asset
- 
-ProjectVersion.txt
+HideAndSeek_DataEdit/.vs/HideAndSeek_DataEdit/v15/.suo
+HideAndSeek_DataEdit/.vs/HideAndSeek_DataEdit/v15/sqlite3/storage.ide
