클래스분할함(item용)

--- a/HideAndSeek_DataEdit/HideAndSeek_DataEdit.csproj
+++ b/HideAndSeek_DataEdit/HideAndSeek_DataEdit.csproj
@@ -79,6 +79,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\DataManager.cs" />
+    <Compile Include="Assets\Script\DataManager_Item.cs" />
+    <Compile Include="Assets\Script\EditUIManager.cs" />
+    <Compile Include="Assets\Script\EditUIManager_Item.cs" />
     <Compile Include="Assets\Script\Item.cs" />
     <Compile Include="Assets\Script\UIManager.cs" />
   </ItemGroup>
