--- a/HideAndSeek_DataEdit/HideAndSeek_DataEdit.csproj
+++ b/HideAndSeek_DataEdit/HideAndSeek_DataEdit.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\ComposeItem.cs" />
     <Compile Include="Assets\Script\DataManager.cs" />
     <Compile Include="Assets\Script\DataManager_Item.cs" />
     <Compile Include="Assets\Script\EditUIManager.cs" />
