조합정보 데이터 저장기능 추가

--- a/HideAndSeek_DataEdit/HideAndSeek_DataEdit.csproj
+++ b/HideAndSeek_DataEdit/HideAndSeek_DataEdit.csproj
@@ -80,8 +80,10 @@
   <ItemGroup>
     <Compile Include="Assets\Script\ComposeItem.cs" />
     <Compile Include="Assets\Script\DataManager.cs" />
+    <Compile Include="Assets\Script\DataManager_Compose.cs" />
     <Compile Include="Assets\Script\DataManager_Item.cs" />
     <Compile Include="Assets\Script\EditUIManager.cs" />
+    <Compile Include="Assets\Script\EditUIManager_Compose.cs" />
     <Compile Include="Assets\Script\EditUIManager_Item.cs" />
     <Compile Include="Assets\Script\Item.cs" />
     <Compile Include="Assets\Script\UIManager.cs" />
