Enemy chasing, normal
//호빈추가
로 Player스크립트 수정된거는 체크해뒀음

--- a/Hide_And_Seek/Assembly-CSharp.csproj
+++ b/Hide_And_Seek/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
      <Compile Include="Assets\Script\enemy_test\test.cs" />
      <Compile Include="Assets\Script\FlashLight.cs" />
      <Compile Include="Assets\Script\GameManager.cs" />
+     <Compile Include="Assets\Script\GameUIManager.cs" />
      <Compile Include="Assets\Script\Inventory.cs" />
      <Compile Include="Assets\Script\InvenUIManager.cs" />
      <Compile Include="Assets\Script\Item.cs" />
@@ -87,7 +88,10 @@
      <Compile Include="Assets\Script\Player.cs" />
      <Compile Include="Assets\Script\SaveManager.cs" />
      <Compile Include="Assets\Script\Scene_Manager.cs" />
+     <Compile Include="Assets\Script\SettingUIManager.cs" />
+     <Compile Include="Assets\Script\SoundUIManager.cs" />
      <Compile Include="Assets\Script\StartUIManager.cs" />
+     <Compile Include="Assets\Script\TestTest.cs" />
      <None Include="Assets\Anima2D\Version.txt" />
      <None Include="Assets\Anima2D\Licenses.txt" />
      <None Include="Assets\Anima2D\Readme.txt" />
