--- a/Hide_And_Seek/Assembly-CSharp.csproj
+++ b/Hide_And_Seek/Assembly-CSharp.csproj
@@ -85,6 +85,7 @@
      <Compile Include="Assets\Script\ItemManager.cs" />
      <Compile Include="Assets\Script\Move.cs" />
      <Compile Include="Assets\Script\MoveWayPoint.cs" />
+     <Compile Include="Assets\Script\Objects.cs" />
      <Compile Include="Assets\Script\Player.cs" />
      <Compile Include="Assets\Script\SaveManager.cs" />
      <Compile Include="Assets\Script\Scene_Manager.cs" />
