--- a/Hide_And_Seek/Assembly-CSharp.csproj
+++ b/Hide_And_Seek/Assembly-CSharp.csproj
@@ -83,16 +83,18 @@
      <Compile Include="Assets\Script\InvenUIManager.cs" />
      <Compile Include="Assets\Script\Item.cs" />
      <Compile Include="Assets\Script\ItemManager.cs" />
+     <Compile Include="Assets\Script\Light_Directional.cs" />
      <Compile Include="Assets\Script\Move.cs" />
      <Compile Include="Assets\Script\MoveWayPoint.cs" />
      <Compile Include="Assets\Script\Objects.cs" />
      <Compile Include="Assets\Script\Player.cs" />
+     <Compile Include="Assets\Script\PlayScene.cs" />
+     <Compile Include="Assets\Script\PlaySceneController.cs" />
      <Compile Include="Assets\Script\SaveManager.cs" />
      <Compile Include="Assets\Script\Scene_Manager.cs" />
      <Compile Include="Assets\Script\SettingUIManager.cs" />
      <Compile Include="Assets\Script\SoundUIManager.cs" />
      <Compile Include="Assets\Script\StartUIManager.cs" />
-     <Compile Include="Assets\Script\TestTest.cs" />
      <None Include="Assets\Anima2D\Version.txt" />
      <None Include="Assets\Anima2D\Licenses.txt" />
      <None Include="Assets\Anima2D\Readme.txt" />
