--- a/HideAndSeek_DataEdit/HideAndSeek_DataEdit.csproj
+++ b/HideAndSeek_DataEdit/HideAndSeek_DataEdit.csproj
@@ -82,10 +82,13 @@
     <Compile Include="Assets\Script\DataManager.cs" />
     <Compile Include="Assets\Script\DataManager_Compose.cs" />
     <Compile Include="Assets\Script\DataManager_Item.cs" />
+    <Compile Include="Assets\Script\DataManager_Script.cs" />
     <Compile Include="Assets\Script\EditUIManager.cs" />
     <Compile Include="Assets\Script\EditUIManager_Compose.cs" />
     <Compile Include="Assets\Script\EditUIManager_Item.cs" />
+    <Compile Include="Assets\Script\EditUIManager_Script.cs" />
     <Compile Include="Assets\Script\Item.cs" />
+    <Compile Include="Assets\Script\Script.cs" />
     <Compile Include="Assets\Script\UIManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
